# duck-hacker

./: .gitignore  CMakeLists.txt  README.md  duck-hacker.rc
cmake/: FindLibPNG.cmake  FindLua.cmake  FindSDL2.cmake
data/models/: duckbot.blend  duckbot.mtl  duckbot.xcf  npc.blend  npc.mtl  printer.blend  printer.mtl
data/models/ad/: scene.blend
data/shaders/: gray.frag.glsl  gray.vert.glsl
data/textures/: alarm_access.xcf  alarm_sign.xcf  archives_direction.xcf  archives_logo.xcf  donation.xcf  quackprints_logo.xcf  quackprints_prices.xcf  security_logo.xcf
data/worlds/: level1.xml  level1_featherwing.lua  level1_waddleton.lua  level2.xml  level3.xml  level3_printer.lua  level4.xml  level4_archivist.lua  level4_assistant.lua  level5.xml  level5_guard.lua  level5_intercom.lua  level6.xml  level6_alarm.lua
docs/: build-linux.md  build-windows.md
install/: installer.iss
src/: defs.hpp  game.cpp  game.hpp  main.cpp
src/content/: font_type.hpp  manager.cpp  manager.hpp
src/game/: credits_screen.cpp  credits_screen.hpp  intro_screen.cpp  intro_screen.hpp  level_select_screen.cpp  level_select_screen.hpp  main_menu_screen.cpp  main_menu_screen.hpp  menu_main_screen.cpp  menu_main_screen.hpp  outro_screen.cpp  outro_screen.hpp  screen.hpp  world_screen.cpp  world_screen.hpp
src/game/editor/: app.cpp  app.hpp  editor_thread.cpp  editor_thread.hpp  frame.cpp  frame.hpp  help_frame.cpp  help_frame.hpp
src/input/: manager.cpp  manager.hpp
src/music/: manager.cpp  manager.hpp
src/progress/: manager.cpp  manager.hpp
src/render/: camera.cpp  camera.hpp  material.cpp  material.hpp  material_factory.cpp  material_factory.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/world/: bot.cpp  bot.hpp  console.cpp  console.hpp  console_line.hpp  npc.cpp  npc.hpp  obstacle.hpp  world.cpp  world.hpp
